# tech-posts

./: .gitignore  .gitlab-ci.yml  IDEAS.md  LICENCE  Makefile  README.md  about.md  contact.markdown  dejust.hs  index.html  lhs-to-md.sh  package-lock.json  package.json  package.yaml  project.clj  stack.yaml  tech-posts.cabal
.circleci/: config.yml
2018/12/: boolean-monoids.md
2019/02/: generic-objects.lhs  island-of-liars.hs  island-of-liars.md  lying-brothers.md  rectangle.benchmark  rectangle.hs  rectangle.md  valleys.benchmark  valleys.hs
alex.kalderimis.dev/: .gitlab-ci.yml  about.rst  alex-kalderimis-dev.cabal  contact.markdown
alex.kalderimis.dev/css/: site.css
alex.kalderimis.dev/posts/: 2019-02-27-rectangle.markdown  2019-03-17-components.md
alex.kalderimis.dev/scripts/: toc.js
alex.kalderimis.dev/src/: site.hs
alex.kalderimis.dev/src/Site/: Contexts.hs  Feed.hs  Pandoc.hs  TOC.hs
alex.kalderimis.dev/templates/: archive.html  default.html  post-list.html  post.html
css/: site.css
posts/: 2018-12-20-boolean-monoids.markdown  2019-02-21-generic-objects.lhs  2019-02-24-island.markdown  2019-03-17-components.md  2021-04-24-continuous-deployment-on-gitlab.markdown  2021-04-24-lying-brothers.markdown  rectangle.markdown
src/: site.hs
src/Site/: Contexts.hs  Feed.hs  Pandoc.hs  TOC.hs
templates/: 404.html  default.html  post-list.html  post.html
