name:             tech-posts
version:          0.0.0
build-type:       Simple
cabal-version:    >= 1.8

library
  build-depends: base, fingertree, markdown-unlit

test-suite readme
  type:           exitcode-stdio-1.0
  main-is:        README.lhs
  build-depends:  base, markdown-unlit
  ghc-options:    -pgmL markdown-unlit
